# btc-laptop-agents

./: .env.alerts.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT_FINAL.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_PLAN.md  MVP_COMMANDS_README.md  Makefile  PROMPT_FOR_NEXT_CHAT.md  PR_SUMMARY.md  README.md  README_PHASE0_1.md  RELEASE_READINESS_AUDIT.md  ROBUSTNESS_BUNDLE_PLAN.md  TESTALL_GUIDE.md  apply_5agent_stack.py  apply_bitunix_support.py  apply_lifecycle_report.py  apply_live_fallbacks.py  apply_okx_patch_v2.py  apply_patch.py  assistant_sync_pack.md  cleanup_codebase.ps1  coverage_report.txt  debug_test.py  docs_cleanup_plan.md  go_temp.ps1  implementation_prompt.md  la.ps1  mypy_all.txt  mypy_async.txt  mypy_strict_errors.txt  ops.ps1  pyproject.toml  python.exe -  requirements-dev.txt  requirements.txt  (+15 more)
.agent/: DIRECTIVES.md  go.ps1  instructions.md  lint_rules.yaml  mypy_errors.txt  mypy_out.txt
.agent/artifacts/: MARKDOWN_AUDIT_REPORT.md  P1_SKILLS_IMPLEMENTATION_PLAN.md
.archive/: AUDIT_QUICK_WINS_COMPLETE.md  DX_MAINTAINABILITY_AUDIT.md
.temp_test/: paper_journal.jsonl
_phase0_bundle_20251230_113737/: SYSTEM_MAP.md
btc-alert-mvp/: README.md  pyproject.toml
btc-alert-mvp/src/btc_alert/: __init__.py  main.py  pipeline.py
btc-alert-mvp/src/btc_alert/collectors/: fear_greed.py  market.py  news.py  price.py  sentiment.py
btc-alert-mvp/src/btc_alert/core/: logger.py  rate_limiter.py
btc-alert-mvp/src/btc_alert/features/: indicators.py  momentum.py  scoring.py  volatility.py
btc-alert-mvp/src/btc_alert/notifiers/: telegram.py
btc-alert-mvp/src/btc_alert/resilience/: __init__.py  errors.py  retry.py
btc-alert-mvp/src/btc_alert/store/: state_store.py
btc-alert-mvp/src/btc_alert/summarizer/: llm.py
config/: KILL_SWITCH.txt  alerts.yaml  bitunix_btcusd_5m.json  default.json  defaults.yaml  free_limits.yaml  risk.yaml  symbol_overrides.json
cov_annotate_state_manager/: z_32c3dad8790ba13c_state_manager.py,cover
dashboard/: index.html  monitor.html  overview.html  performance.html
docs/: AGENTS.md  AI_ENGINEERING_PROTOCOL.md  AI_HANDOFF.md  ALERTS_README.md  API_REFERENCE.md  ASSISTANT_CONTEXT.md  ASYNC_RESILIENCE_PLAN.md  AUDIT_CHECKLIST.md  AUDIT_NOTES.md  AUDIT_REPORT.md  AUTONOMY_EVALUATION.md  BTC_ALERT_PARALLEL_AUTOPILOT.md  CODEX_WORKFLOWS.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  DEV_AGENTS.md  DX_MAINTAINABILITY_AUDIT.md  ENGINEER.md  FIX_PATHS.md  GATES.md  GIT_WORKFLOW.md  KNOWN_ISSUES.md  MAINTENANCE_REPORT.md  MAP.md  MONITOR_PLAN.md  MVP_SPEC.md  MVP_TARGET.md  NEXT.md  NEXT_AI_INSTRUCTIONS.md  ORCHESTRATION.md  PHASE_E_PLAN.md  PROJECT_SCOPE.md  QA_AUTONOMY_AUDIT_PROMPT.md  QA_VALIDATION_PLAN.md  RELEASE_READINESS.md  RUNBOOK.md  SMOKE_TEST.md  SPEC.md  START_HERE.md  STRATEGY_CATALOG.md  (+8 more)
ops/: preflight.ps1
plans/: autonomy_audit.md  improvement_backlog.md
prompts/: 01_architect_prompt.md  02_builder_prompt.md  03_qa_prompt.md  04_release_prompt.md  05_integration_prompt.md
reports/: report_breakout_ema_atr.json
scripts/: README.md  add_regression_test.py  audit_plan.py  auditor.py  backtest_breakout_ema_atr.py  bitunix_probe.py  check_bitunix_info.py  check_docs_links.py  check_lint_rules.py  check_live_ready.py  check_quality_gates.py  check_symbols.py  check_version.py  codex_fix_loop.ps1  codex_review.ps1  collect_candles.py  dashboard_server.py  dashboard_up.ps1  diagnose_pending_errors.py  error_fingerprinter.py  fast_deploy.ps1  generate_report.py  generate_troubleshooting_docs.py  harness.py  lenovo_local_check.ps1  live_dashboard.ps1  live_loop.ps1  live_once.ps1  live_paper_loop.py  live_paper_loop.py.bak_20260105_111353  make_sync_pack.ps1  monitor.ps1  monitor_heartbeat.py  monte_carlo_v1.py  mvp_open.ps1  mvp_run_once.ps1  mvp_start_live.ps1  mvp_status.ps1  mvp_stop_live.ps1  optimize_strategy.py  (+33 more)
tests/: conftest.py  test_agents_unit.py  test_alerts_budget.py  test_alerts_dedup.py  test_alerts_formatter.py  test_alerts_keywords.py  test_alerts_scoring.py  test_async_integration.py  test_autonomy_resilience.py  test_backtest_broker.py  test_backtest_engine.py  test_backtest_provider.py  test_bitunix_broker.py  test_bitunix_signing.py  test_broker_state_recovery.py  test_circuit_breaker.py  test_config_loader.py  test_coverage_boost.py  test_fill_simulator.py  test_free_collectors.py  test_funding.py  test_funding_gate.py  test_orchestrator_integration.py  test_paper_journal.py  test_pipeline_smoke.py  test_preflight.py  test_protocol_compliance.py  test_provider_mock.py  test_refactored_logic.py  test_run_reproducibility.py  test_safety.py  test_safety_dynamic_limits.py  test_secret_scrubbing.py  test_session_lifecycle.py  test_smoke.py  test_state_manager.py  test_sweep_indicators.py  test_trailing_stop.py  test_trailing_stop_unit.py  test_websocket_mock.py  (+1 more)
tools/: apply.ps1  dev.ps1  safe_apply.py
(+301 files in other folders)
