[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-laptop-agents"
version = "1.1.0"
description = "Local-only agent runner that stores memory on disk and runs on a laptop."
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.10.2",
  "rich>=13.9.4",
  "typer>=0.15.4",
  "httpx>=0.28.1",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
la = "laptop_agents.main:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]

testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
