[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-laptop-agents"
version = "1.1.0"
description = "Local-only agent runner that stores memory on disk and runs on a laptop."
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.10.2",
  "rich>=13.9.4",
  "typer>=0.15.4",
  "httpx>=0.28.1",
  "psutil>=5.9.0",
  "tenacity>=8.5.0",
  "cachetools>=5.3.3",
  "aiohttp>=3.9.5",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
  "types-PyYAML>=6.0.12.20240808",
  "types-cachetools>=5.5.0.20240820",
  "types-psutil>=5.9.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pytest-xdist",
  "pre-commit>=4.0.0",
  "build>=1.0.0",
  "pip-audit>=2.7.0",
]
dashboard = [
  "Flask>=3.0.0",
]

[project.scripts]
la = "laptop_agents.main:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false
check_untyped_defs = true

# Per-module overrides for untyped libs
[[tool.mypy.overrides]]
module = [
    "tenacity.*",
    "aiohttp.*",
    "flask.*",
    "psutil.*",
    "error_fingerprinter"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "laptop_agents.*"
ignore_missing_imports = false
check_untyped_defs = true
warn_return_any = true

# ══════════════════════════════════════════════════════════════════════════════
# Semantic Release Configuration
# ══════════════════════════════════════════════════════════════════════════════
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/laptop_agents/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
build_command = "pip install build && python -m build"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "chore", "docs", "style", "test", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
